// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.ContextMenu.Item checkGrammar 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkGrammar 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkGrammar 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkGrammar 4`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkHighlight 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkHighlight 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkHighlight 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkHighlight 4`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkSpaces 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkSpaces 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkSpaces 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item checkSpaces 4`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item className 1`] = `
<li
  className="uu5-bricks-context-menu-item my-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item content 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item content 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item content 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item content 4`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item controlled 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item controlled 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item controlled 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item controlled 4`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item default props 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item disabled 1`] = `
<li
  className="uu5-bricks-context-menu-item uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={true}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item disabled 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item disabled 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item disabled 4`] = `
<li
  className="uu5-bricks-context-menu-item uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={true}
    download={false}
    dynamic={false}
    hidden={false}
    href={null}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={0}
    onClick={null}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item diviner 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item diviner 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item diviner 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item diviner 4`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item docKit examples UU5.Bricks.ContextMenu.Item example make snapshot 1`] = `
<Popover
  ccrKey={null}
  className="uu5-bricks-context-menu"
  content={
    <ul
      className="uu5-bricks-context-menu-ul"
    >
      <ContextMenuItem
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        divider={false}
        dynamic={false}
        header={false}
        hidden={false}
        href={null}
        icon="mdi-weather-sunset-up"
        id="uuID2"
        ignoreInnerHTML={false}
        label="Ráno"
        mainAttrs={null}
        name={null}
        noIndex={false}
        offset={null}
        onClick={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        smoothScroll={1000}
        space={true}
        style={null}
        target="_self"
        tooltip={null}
      />
      <ContextMenuItem
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        divider={false}
        dynamic={false}
        header={false}
        hidden={false}
        href={null}
        icon={null}
        id="uuID3"
        ignoreInnerHTML={false}
        label="Dopoledne"
        mainAttrs={null}
        name={null}
        noIndex={false}
        offset={null}
        onClick={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        smoothScroll={1000}
        space={true}
        style={null}
        target="_self"
        tooltip={null}
      />
      <ContextMenuItem
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={true}
        divider={false}
        dynamic={false}
        header={false}
        hidden={false}
        href={null}
        icon="mdi-weather-sunny"
        id="uuID4"
        ignoreInnerHTML={false}
        label="V poledne"
        mainAttrs={null}
        name={null}
        noIndex={false}
        offset={null}
        onClick={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        smoothScroll={1000}
        space={true}
        style={null}
        target="_self"
        tooltip={null}
      />
      <ContextMenuItem
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        divider={false}
        dynamic={false}
        header={false}
        hidden={false}
        href={null}
        icon={null}
        id="uuID5"
        ignoreInnerHTML={false}
        label="Odpoledne"
        mainAttrs={null}
        name={null}
        noIndex={false}
        offset={null}
        onClick={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        smoothScroll={1000}
        space={true}
        style={null}
        target="_self"
        tooltip={null}
      />
      <ContextMenuItem
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        divider={false}
        dynamic={false}
        header={false}
        hidden={false}
        href={null}
        icon="mdi-weather-sunset"
        id="uuID6"
        ignoreInnerHTML={false}
        label="Večer"
        mainAttrs={null}
        name={null}
        noIndex={false}
        offset={null}
        onClick={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        smoothScroll={1000}
        space={false}
        style={null}
        target="_self"
        tooltip={null}
      />
      <ContextMenuItem
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        divider={true}
        dynamic={false}
        header={false}
        hidden={false}
        href={null}
        icon={null}
        id="uuID7"
        ignoreInnerHTML={false}
        label={null}
        mainAttrs={null}
        name={null}
        noIndex={false}
        offset={null}
        onClick={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        smoothScroll={1000}
        space={false}
        style={null}
        target="_self"
        tooltip={null}
      />
      <ContextMenuItem
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        divider={false}
        dynamic={false}
        header={false}
        hidden={false}
        href={null}
        icon={null}
        id="uuID8"
        ignoreInnerHTML={false}
        label="Vlastní"
        mainAttrs={null}
        name={null}
        noIndex={false}
        offset={null}
        onClick={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        smoothScroll={1000}
        space={false}
        style={null}
        target="_self"
        tooltip={null}
      />
      <ContextMenuItem
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={false}
        divider={false}
        dynamic={false}
        header={false}
        hidden={false}
        href={null}
        icon={null}
        id="uuID9"
        ignoreInnerHTML={false}
        label="Nějaké další"
        mainAttrs={null}
        name={null}
        noIndex={false}
        offset={null}
        onClick={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        smoothScroll={1000}
        space={false}
        style={null}
        target="_self"
        tooltip={null}
      />
      <ContextMenuItem
        allowTags={Array []}
        className={null}
        content={null}
        controlled={true}
        disabled={true}
        divider={false}
        dynamic={false}
        header={false}
        hidden={false}
        href={null}
        icon={null}
        id="uuID10"
        ignoreInnerHTML={false}
        label="Úplně jiné"
        mainAttrs={null}
        name={null}
        noIndex={false}
        offset={null}
        onClick={null}
        parent={null}
        pureRender={false}
        ref_={null}
        selected={false}
        smoothScroll={1000}
        space={false}
        style={null}
        target="_self"
        tooltip={null}
      />
    </ul>
  }
  controlled={true}
  disabled={false}
  dynamic={false}
  fitHeightToViewport={false}
  footer="Footer"
  forceRender={false}
  header="Header"
  hidden={false}
  id="uuID-inner"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={Object {}}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  parentElement={null}
  pureRender={false}
  ref_={[Function]}
  selected={false}
  shown={true}
  style={null}
  tooltip={null}
  underline={false}
/>
`;

exports[`UU5.Bricks.ContextMenu.Item dynamic 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item dynamic 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item dynamic 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item dynamic 4`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item hidden 1`] = `
<li
  className="uu5-bricks-context-menu-item uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item hidden 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item hidden 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item hidden 4`] = `
<li
  className="uu5-bricks-context-menu-item uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item href 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="https://www.plus4u.net/"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item href 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#idELEMENT"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item href 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#idELEMENT"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item href 4`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="https://www.plus4u.net/"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item icon 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        <Icon
          authenticate={false}
          className="uu5-bricks-context-menu-item-icon"
          clickable={true}
          controlled={true}
          disabled={false}
          hidden={false}
          icon="mdi-menu"
          id={null}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          src=""
          style={null}
          tooltip={null}
        />,
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item id 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="myId"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item ignoreHTML 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item ignoreHTML 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item ignoreHTML 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item ignoreHTML 4`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item label 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        "myLabel",
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item mainAttrs 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item name 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item noIndex 1`] = `
<li
  className="uu5-bricks-context-menu-item uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item noIndex 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item noIndex 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item noIndex 4`] = `
<li
  className="uu5-bricks-context-menu-item uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item offset 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={70}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item props.onClick() 1`] = `
<ContextMenu
  allowTags={Array []}
  ccrKey={null}
  className={null}
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  footer={null}
  forceRender={false}
  header={null}
  hidden={false}
  id="menu"
  ignoreInnerHTML={false}
  level={null}
  mainAttrs={null}
  name={null}
  nestingLevel={null}
  noIndex={false}
  parentElement={null}
  pureRender={false}
  ref_={null}
  selected={false}
  shown={true}
  style={null}
  tooltip={null}
  underline={false}
>
  <ContextMenuItem
    allowTags={Array []}
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    divider={false}
    dynamic={false}
    header={false}
    hidden={false}
    href={null}
    icon={null}
    id="items"
    ignoreInnerHTML={false}
    label="Dopoledne"
    mainAttrs={null}
    name={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    space={false}
    style={null}
    target="_self"
    tooltip={null}
  />
</ContextMenu>
`;

exports[`UU5.Bricks.ContextMenu.Item pureRender 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item pureRender 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item pureRender 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item pureRender 4`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item selected 1`] = `
<li
  className="uu5-bricks-context-menu-item uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item selected 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item selected 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item selected 4`] = `
<li
  className="uu5-bricks-context-menu-item uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item smoothScroll 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={3000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item space 1`] = `
<li
  className="uu5-bricks-context-menu-item uu5-bricks-context-menu-item-space"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item space 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item space 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item space 4`] = `
<li
  className="uu5-bricks-context-menu-item uu5-bricks-context-menu-item-space"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item style 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item style 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item style 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item style 4`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item target 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_blank"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item target 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_parent"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item target 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_parent"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item target 4`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_top"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item target 5`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_top"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item target 6`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item target 7`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item target 8`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_top"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item textCorrector 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item textCorrector 2`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item textCorrector 3`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item textCorrector 4`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;

exports[`UU5.Bricks.ContextMenu.Item tooltip 1`] = `
<li
  className="uu5-bricks-context-menu-item"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <Link
    className="uu5-bricks-context-menu-item-link"
    colorSchema="custom"
    content={
      Array [
        null,
      ]
    }
    controlled={true}
    disabled={false}
    download={false}
    dynamic={false}
    hidden={false}
    href="#"
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    offset={null}
    onClick={[Function]}
    onCtrlClick={null}
    onWheelClick={null}
    pureRender={false}
    ref_={null}
    selected={false}
    smoothScroll={1000}
    style={null}
    target="_self"
    tooltip={null}
  />
</li>
`;
